--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,3 @@
-header {
-  background-color: #F3F3F3;
-  border: none;
-  border-top: 0.2rem solid red;
-}
-
-.nav__bar1 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style-type: none;
-}
-.nav__items {
-  display: inline-block;
-  padding: 1.3rem;
-  color: #333232;
-}
-
 * {
   margin: inherit;
   padding: inherit;
@@ -25,7 +7,117 @@ header {
 body {
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-size: 63%;
+}
+
+body {
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  color: #5f5e5e;
   line-height: 1.1;
+}
+
+header {
+  background-color: #F3F3F3;
+  border: none;
+  border-top: 0.3rem solid #E52E06;
+}
+
+.nav__bar1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  list-style-type: none;
+  margin: 0;
+  font-size: 1.4rem;
+}
+.nav__items {
+  display: inline-block;
+  padding: 1.8rem 2.5rem;
+  color: #5f5e5e;
+  position: relative;
+}
+.nav__items ion-icon {
+  font-size: 2.5rem;
+  font-weight: 100;
+  padding: 0;
+}
+.nav__items .nav__icons--1 {
+  position: absolute;
+  top: 1rem;
+  left: -0.5rem;
+}
+.nav__items .nav__icons--2 {
+  position: absolute;
+  top: 1rem;
+  left: -0.5rem;
+}
+.nav__items .nav__icons--3 {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 1.9rem;
+  right: 0.8rem;
+}
+.nav__items .nav__icons--4 {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 1.9rem;
+  right: 0.8rem;
+}
+.nav__items:hover {
+  color: #E52E06;
+}
+.nav__items--custom {
+  width: 16rem;
+  position: relative;
+  display: inline-block;
+  background-color: #fff;
+  padding: 1.8rem 0.8rem;
+  color: #5f5e5e;
+  opacity: 0;
+  box-shadow: 0 0.14rem 4rem rgba(0, 0, 0, 0.14);
+  transition: all 0.2s;
+}
+.nav__items--custom .nav__icons--3 {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 0.2rem;
+  right: -1.5rem;
+}
+.nav__items--custom .nav__icons--4 {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 0;
+  right: -1.5rem;
+}
+.nav__items--lang {
+  position: absolute;
+  top: 7.2rem;
+  right: 34.5rem;
+  opacity: 0;
+  visibility: hidden;
+}
+.nav__items--currency {
+  position: absolute;
+  top: 7.2rem;
+  right: 25.4rem;
+  opacity: 0;
+  visibility: hidden;
+}
+.nav__items--english:hover ~ .nav__items--lang {
+  opacity: 1;
+  visibility: visible;
+  top: 5.2rem;
+}
+.nav__items--USD:hover ~ .nav__items--currency {
+  opacity: 1;
+  visibility: visible;
+  top: 5.2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
