--- a/sass/layouts/_navigation_bar.scss
+++ b/sass/layouts/_navigation_bar.scss
@@ -1,7 +1,7 @@
 header {
-    background-color: #F3F3F3;
+    background-color: $secondary-color;
     border: none;
-    border-top: .2rem solid red;
+    border-top: .3rem solid $primary-color;
 }
 
 .nav {
@@ -9,14 +9,108 @@ header {
         display: flex;
         justify-content: space-around;
         align-items: center;
+        position: relative;
 
         list-style-type: none;
+        margin: 0;
+
+        font-size: 1.4rem;
     }
 
     &__items {
         display: inline-block;
-        padding: 1.3rem;
-        color: #333232;
+        padding: 1.8rem 2.5rem;
+        color: $secondary-text-color;
 
+        position: relative;
+
+        ion-icon {
+            font-size: 2.5rem;
+            font-weight: 100;
+            padding: 0;
+        }
+
+        .nav__icons--1{
+            position: absolute;
+            top: 1rem;
+            left: -.5rem;
+        }
+        .nav__icons--2{
+            position: absolute;
+            top: 1rem;
+            left: -.5rem;
+        }
+        .nav__icons--3{
+            font-size: 1.3rem;
+            position: absolute;
+            top: 1.9rem;
+            right: .8rem;
+        }
+        .nav__icons--4{
+            font-size: 1.3rem;
+            position: absolute;
+            top: 1.9rem;
+            right: .8rem;
+        }
+    }
+
+    &__items:hover {
+        color: $primary-color;
+    }
+
+    &__items--custom {
+        width: 16rem;
+        position: relative;
+        display: inline-block;
+
+        background-color: $tertiary-color;
+        padding: 1.8rem .8rem;
+        color: $secondary-text-color;
+        opacity: 0;
+
+        box-shadow: 0 .14rem 4rem rgba($text-color-black, 0.14);
+        transition: all .2s;
+
+        .nav__icons--3{
+            font-size: 1.3rem;
+            position: absolute;
+            top: .2rem;
+            right: -1.5rem;
+        }
+        .nav__icons--4{
+            font-size: 1.3rem;
+            position: absolute;
+            top: 0;
+            right: -1.5rem;
+        }
+    }
+
+    &__items--lang {
+        position: absolute;
+        top: 7.2rem;
+        right: 34.5rem;
+        opacity: 0;
+        visibility: hidden;
+    }
+    &__items--currency {
+        position: absolute;
+        top: 7.2rem;
+        right: 25.4rem;
+        opacity: 0;
+        visibility: hidden;
+        
+    }
+
+    &__items--english:hover ~ &__items--lang {
+        opacity: 1;
+        visibility: visible;
+        top: 5.2rem;
+    }
+
+    &__items--USD:hover ~ &__items--currency {
+        opacity: 1;
+        visibility: visible;
+        top: 5.2rem;
     }
 }
+
