--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-$primary-color: #E52E06;
-$secondary-color: #F3F3F3;
-$tertiary-color: #fff;
+$primary-color-red: #E52E06;
+$secondary-color-gray: #F3F3F3;
+$tertiary-color-white: #fff;
 
 $text-color-black: #000;
 $secondary-text-color: #5f5e5e;
