--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,4 +4,4 @@ $tertiary-color-white: #fff;
 
 $text-color-black: #000;
 $secondary-text-color: #5f5e5e;
-$text-color-tertiary: #505050;
+$text-color-tertiary: #a3a3a3;
